// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly color 1`] = `
<button
  className="root rootPriorityFilled rootColorSuccess rootSizeMedium    "
  disabled={false}
  onClick={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly flat 1`] = `
<button
  className="root rootPriorityFlat rootColorPrimary rootSizeMedium    "
  disabled={false}
  onClick={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly label visibility 1`] = `
<button
  className="root rootPriorityFilled rootColorPrimary rootSizeMedium withLabelHidden   "
  disabled={false}
  onClick={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly mandatory props only 1`] = `
<button
  className="root rootPriorityFilled rootColorPrimary rootSizeMedium    "
  disabled={false}
  onClick={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly priority \`link\` 1`] = `
<button
  className="root rootPriorityLink"
  disabled={false}
  onClick={null}
  type="button"
>
  <span
    className="label"
  >
    link
  </span>
</button>
`;

exports[`rendering renders correctly priority \`link\` with all props 1`] = `
<button
  className="root rootPriorityLink"
  disabled={true}
  id="custom-id"
  onClick={null}
  type="button"
>
  <span
    className="beforeLabel"
  >
    <span
      className="icon"
    />
  </span>
  <span
    className="label"
    id="custom-id__labelText"
  >
    link
  </span>
  <span
    className="afterLabel"
  >
    <span
      className="icon"
    />
  </span>
</button>
`;

exports[`rendering renders correctly priority 1`] = `
<button
  className="root rootPriorityOutline rootColorPrimary rootSizeMedium    "
  disabled={false}
  onClick={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly size 1`] = `
<button
  className="root rootPriorityFilled rootColorPrimary rootSizeLarge    "
  disabled={false}
  onClick={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly with all props 1`] = `
<button
  className="root rootPriorityFlat rootColorSuccess rootSizeLarge withLabelHiddenMobile rootBlock rootGrouped isRootLoading"
  disabled={true}
  id="custom-id"
  onClick={null}
  type="button"
>
  <span
    className="startCorner"
  >
    <WithProviderContextComponent
      label={1}
    />
  </span>
  <span
    className="beforeLabel"
  >
    <span
      className="icon"
    />
  </span>
  <span
    className="label"
    id="custom-id__labelText"
  >
    button
  </span>
  <span
    className="afterLabel"
  >
    <span
      className="icon"
    />
  </span>
  <span
    className="endCorner"
  >
    <WithProviderContextComponent
      label={2}
    />
  </span>
  <span
    className="loadingIcon"
  >
    <span
      className="icon"
    />
  </span>
</button>
`;

exports[`rendering renders correctly with icon 1`] = `
<button
  className="root rootPriorityFilled rootColorPrimary rootSizeMedium    "
  disabled={false}
  onClick={null}
  type="button"
>
  <span
    className="beforeLabel"
  >
    <span
      className="icon"
    />
  </span>
  <span
    className="label"
  >
    button
  </span>
</button>
`;
